k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ajktown-wordnote
  namespace: ajktown
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ajktown-wordnote
  template:
    metadata:
      labels:
        app: ajktown-wordnote
    spec:
      containers:
      - name: ajktown-wordnote
        image: ajktown/wordnote:latest
        ports:
        - containerPort: 3000
