k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ajktown-wordnote-svc
  namespace: ajktown
  labels:
    app: ajktown-wordnote
spec:
  selector:
    app: ajktown-wordnote
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: NodePort
