k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ajktown-fe-sa
  namespace: ajktown
  labels:
    app: ajktown-fe
spec:
  selector:
    app: ajktown-fe
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
  type: LoadBalancer
