k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ajktown-fe-ingress
  namespace: ajktown
spec:
  rules:
  - host: wordnote.ajktown.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ajktown-fe-svc
            port:
              number: 3000
